--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 		<strong>Tobias Kreiman</strong>
 		<a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>,
         <br>
-        <em>Preprint</em>, 2024
+        <em>ICML</em>, 2024
         <br>
         <a href="https://seohong.me/projects/hilp/">project page</a>
         /
@@ -105,13 +105,13 @@
   <a href="https://ai.stanford.edu/~cbfinn/">Chelsea Finn</a>,
   <a href="https://people.eecs.berkeley.edu/~svlevine/">Sergey Levine</a>,
       <br>
-      <em>Technical Report</em>, 2023
+      <em>RSS</em>, 2024
       <br>
       <a href="https://octo-models.github.io/">project page</a>
       /
       <a href="https://github.com/octo-models/octo">code</a>
       /
-      <a href="https://octo-models.github.io/paper.pdf">arXiv</a>
+      <a href="https://arxiv.org/abs/2405.12213">arXiv</a>
       <p></p>
       
     </td>
