--- a/projects/mlff_distribution_shifts/index.html
+++ b/projects/mlff_distribution_shifts/index.html
@@ -213,7 +213,7 @@
             </p>
           </div>
           <div class="container is-max-desktop">
-            <img id="teaser" src="./static/images/system_diagram.png" alt="System Diagram" width="100%">
+            <img id="teaser" src="./images/distribution_shifts.png" alt="Distribution Shifts Diagram" width="100%">
            </div>
            <div class="content has-text-justified">
             <!-- <p>
