--- a/projects/mlff_distribution_shifts/index.html
+++ b/projects/mlff_distribution_shifts/index.html
@@ -133,12 +133,12 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://github.com/ASK-Berkeley/MLFF-distribution-shifts"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code Coming Soon</span>
+                  <span>Code</span>
                   </a>
               </span>
               <!-- Dataset Link. -->
