--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Toby Kreiman
                 </p>
-                <p>I'm a PhD student at UC Berkeley at <a href="https://bair.berkeley.edu">UC Berkeley</a> where I am advised by <a href="https://a1k12.github.io">Aditi Krishnapriyan</a>. I studied Physics and Computer Science at Columbia University during my undergraduate degree, where I was fortunate to be advised by <a href="https://www.me.columbia.edu/faculty/matei-ciocarlie">Matei Ciocarlie</a>. 
+                <p>I'm a PhD student at UC Berkeley in <a href="https://bair.berkeley.edu">BAIR</a> where I am advised by <a href="https://a1k12.github.io">Aditi Krishnapriyan</a>. I studied Physics and Computer Science at Columbia University during my undergraduate degree, where I was fortunate to be advised by <a href="https://www.me.columbia.edu/faculty/matei-ciocarlie">Matei Ciocarlie</a>. 
                 </p>
                 <p>
                   I am interested in the intersection of Physics and Machine Learning. I am currently working on developing physics-inspired machine learning algorithms for molecular dynamics. I'm also interested in Reinforcement Learning; I have done previous work on developing algorithms for co-design of hardware and policy for robotic manipulation.
