--- a/projects/mlff_distribution_shifts/index.html
+++ b/projects/mlff_distribution_shifts/index.html
@@ -93,23 +93,23 @@
             <span class="author-block">
               <a href="https://tkreiman.github.io">Tobias Kreiman</a><sup>1</sup>,</span>
             <span class="author-block">
-              <a href="https://a1k12.github.io/">Aditi Krishnapriyan</a><sup>1</sup>,</span>
+              <a href="https://a1k12.github.io/">Aditi Krishnapriyan</a><sup>1</sup></span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>UC Berkeley,</span>
+            <span class="author-block"><sup>1</sup>UC Berkeley</span>
           </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2503.08674"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>Paper Coming Soon</span>
+                  <span>Paper</span>
                 </a>
               </span>
               <!-- <span class="link-block">
@@ -369,7 +369,7 @@
             </p>
             <br>
             <p>
-              For more details, check out our paper!
+              For more details, check out <a href="https://arxiv.org/abs/2503.08674" target="_blank">our paper!</a>
             </p>
           </div>
         </div>
@@ -379,13 +379,16 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <!-- <pre><code>@article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
-  journal   = {ICCV},
-  year      = {2021},
+    <pre><code>@misc{kreiman2025understandingmitigatingdistributionshifts,
+      title={Understanding and Mitigating Distribution Shifts For Machine Learning Force Fields}, 
+      author={Tobias Kreiman and Aditi S. Krishnapriyan},
+      year={2025},
+      eprint={2503.08674},
+      archivePrefix={arXiv},
+      primaryClass={cs.LG},
+      url={https://arxiv.org/abs/2503.08674}, 
 }</code></pre>
-  </div> -->
+  </div> 
 </section>
 
 
