add neurips mlip arena

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <a href="https://a1k12.github.io/">Aditi Krishnapriyan</a>
           <a href="https://vcresearch.berkeley.edu/faculty/mark-asta">Mark Asta</a>,
               <br>
-              <em>AI4MAT Workshop Spotlight @ICLR</em>, 2025
+              <em>AI4MAT Workshop Spotlight @ICLR</em>, NeurIPS Spotlight, 2025
               <br>
               <a href="https://huggingface.co/spaces/atomind/mlip-arena">project page</a>
               /
