--- a/projects/graph-free-transformers/index.html
+++ b/projects/graph-free-transformers/index.html
@@ -75,7 +75,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Transformers Adaptively Learn Molecular Structure Without Graph Priors</h1>
+          <h1 class="title is-1 publication-title">Transformers Discover Interatomic Structure Without Graph Priors</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://tkreiman.github.io">Tobias Kreiman</a><sup>1</sup>,</span>
