--- a/projects/graph-free-transformers/index.html
+++ b/projects/graph-free-transformers/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Transformers Discover Interatomic Structure Without Graph Priors">
+        content="Transformers Discover Molecular Structure Without Graph Priors">
   <meta name="keywords" content="graph-free, force field, machine learning, pre-training, scaling laws">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <title>Transformers Adaptively Learn Molecular Structure Without Graph Priors</title>
@@ -75,7 +75,7 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Transformers Discover Interatomic Structure Without Graph Priors</h1>
+          <h1 class="title is-1 publication-title">Transformers Discover Molecular Structure Without Graph Priors</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <a href="https://tkreiman.github.io">Tobias Kreiman</a><sup>1</sup>,</span>
