--- a/projects/graph-free-transformers/index.html
+++ b/projects/graph-free-transformers/index.html
@@ -6,7 +6,7 @@
         content="Transformers Discover Molecular Structure Without Graph Priors">
   <meta name="keywords" content="graph-free, force field, machine learning, pre-training, scaling laws">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <title>Transformers Adaptively Learn Molecular Structure Without Graph Priors</title>
+  <title>Transformers Discover Molecular Structure Without Graph Priors</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
