--- a/projects/graph-free-transformers/index.html
+++ b/projects/graph-free-transformers/index.html
@@ -99,9 +99,9 @@
                 <a href=""
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                      <i class="fas fa-file-pdf"></i>
+                      <i class="fas fa-file-pdf">https://arxiv.org/abs/2510.02259</i>
                   </span>
-                  <span>Paper Coming Soon</span>
+                  <span>Paper</span>
                 </a>
               </span>
               <!-- <span class="link-block">
