--- a/projects/graph-free-transformers/index.html
+++ b/projects/graph-free-transformers/index.html
@@ -96,10 +96,10 @@
             <div class="publication-links">
               <!-- PDF Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://arxiv.org/abs/2510.02259"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
-                      <i class="fas fa-file-pdf">https://arxiv.org/abs/2510.02259</i>
+                      <i class="fas fa-file-pdf"></i>
                   </span>
                   <span>Paper</span>
                 </a>
