--- a/projects/graph-free-transformers/index.html
+++ b/projects/graph-free-transformers/index.html
@@ -125,12 +125,12 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href=""
+                <a href="https://github.com/ASK-Berkeley/graph-free-transformer"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code coming soon</span>
+                  <span>Code</span>
                   </a>
               </span>
               <!-- BibTeX Link. -->
