--- a/projects/graph-free-transformers/index.html
+++ b/projects/graph-free-transformers/index.html
@@ -672,7 +672,7 @@
       Our findings suggest that <b>Transformers can learn many of the graph-based inductive biases typically built into current ML models for chemistry—while doing so more flexibly.</b> We hope these findings point towards a standardized, widely applicable architecture for molecular modeling that draws on insights from the broader deep learning community.
       <br>
       <br>
-      For more details, check out <a href="" target="_blank">our paper!</a>
+      For more details, check out <a href="https://arxiv.org/abs/2510.02259" target="_blank">our paper!</a>
         </p>
       </div>
     </div>
