--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
               <br>
           
           <strong>Tobias Kreiman</strong>,
-          <a href="https://yutongbai.com/">Yutong Bai</a>
-          <a href="https://www.linkedin.com/in/fadi-atieh/">Fadi Atieh</a>
-          <a href="https://elizabethweaver.me/index.html">Elizabeth Weaver</a>
-          <a href="https://people.eecs.berkeley.edu/~ericqu/">Eric Qu</a>
+          <a href="https://yutongbai.com/">Yutong Bai</a>,
+          <a href="https://www.linkedin.com/in/fadi-atieh/">Fadi Atieh</a>,
+          <a href="https://elizabethweaver.me/index.html">Elizabeth Weaver</a>,
+          <a href="https://people.eecs.berkeley.edu/~ericqu/">Eric Qu</a>,
           <a href="https://a1k12.github.io/">Aditi Krishnapriyan</a>
               <br>
               <em>Preprint</em>, 2025
@@ -94,11 +94,11 @@
               </a>
               <br>
           
-          <a href="https://sanjeevraja.com/">Sanjeev Raja</a>
-          <a href="https://scholar.google.com/citations?user=m-vTk2oAAAAJ&hl=en">Martin Šípka</a>
-          <a href="https://www.michaelpsenka.io/">Michael Psenka</a>
+          <a href="https://sanjeevraja.com/">Sanjeev Raja</a>,
+          <a href="https://scholar.google.com/citations?user=m-vTk2oAAAAJ&hl=en">Martin Šípka</a>,
+          <a href="https://www.michaelpsenka.io/">Michael Psenka</a>,
           <strong>Tobias Kreiman</strong>,
-          <a href="https://scholar.google.ca/citations?user=ShyPPQkAAAAJ&hl=en">Michal Pavelka</a>
+          <a href="https://scholar.google.ca/citations?user=ShyPPQkAAAAJ&hl=en">Michal Pavelka</a>,
           <a href="https://a1k12.github.io/">Aditi Krishnapriyan</a>
               <br>
               <em>ICML</em>, 2025
